--- a/mission-control-frontend/direction.html
+++ b/mission-control-frontend/direction.html
@@ -107,25 +107,28 @@
 
   #amr-marker {
     position: absolute;
-    width: 24px;
-    height: 24px;
-    border-radius: 6px;          /* <= rounded square */
-    background: rgba(239, 68, 68, 0.9);  /* red-ish */
-    border: 2px solid rgba(248, 250, 252, 0.9);
+    width: 26px;
+    height: 26px;
+    background: rgba(239, 68, 68, 0.9);
+    border: 2px solid rgba(248, 250, 252, 0.95);
+    border-radius: 6px;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
-    transform: translate(-50%, -50%) rotate(0deg);
+    transform: translate(-50%, -50%);
     pointer-events: none;
   }
-  .station-odom{
-    position:absolute;
-    left:10px;
-    bottom:10px;
-    background:rgba(15,23,42,0.9);
-    border-radius:8px;
-    padding:6px 10px;
-    font-size:12px;
-    color:var(--muted);
-    border:1px solid var(--border);
+
+  /* 🔺 direction arrow (robot nose) */
+  #amr-marker::after {
+    content: "";
+    position: absolute;
+    top: -8px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 0;
+    height: 0;
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    border-bottom: 10px solid rgba(248, 250, 252, 0.95);
   }
 
   .station-joystick-overlay{
