--- a/mission-control-frontend/login.html
+++ b/mission-control-frontend/login.html
@@ -81,7 +81,8 @@
     <div class="title">SkyWatch Login</div>
 
     <input type="text" id="username" placeholder="Username">
-    <input type="password" id="password" placeholder="Password">
+    <input type="password" id="password" placeholder="Password" autocomplete="new-password"
+      data-lpignore="true">
 
     <button onclick="login()">Login</button>
 
